--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>VRFS Mini Bets</title>
+<title>VRFS SportsWave Bets</title>
 <style>
 body {background-color: #0f172a; color: white; font-family: Arial, sans-serif; padding: 20px;}
-h1 {text-align: center;}
+h1 {text-align: center; cursor: pointer;}
 .game {background: #111827; padding: 15px; margin: 10px 0; border-radius: 10px;}
 button {padding: 6px 12px; border: none; border-radius: 6px; background: #2563eb; color: white; cursor: pointer;}
 button:disabled {background: gray; cursor: not-allowed;}
@@ -16,7 +16,7 @@ button:disabled {background: gray; cursor: not-allowed;}
 </head>
 <body>
 
-<h1>VRFS Mini Bets</h1>
+<h1 id="siteTitle">VRFS SportsWave Bets</h1>
 <p>Balance: <span id="balance"></span> points</p>
 
 <div id="games"></div>
@@ -56,24 +56,43 @@ button:disabled {background: gray; cursor: not-allowed;}
 </div>
 
 <script>
+// --- DATA ---
 let balance = parseInt(localStorage.getItem("balance")) || 10000;
 let games = JSON.parse(localStorage.getItem("games")) || [
     { id: 1, team1: "Crystal Palace", team2: "Derby County", score1: 0, score2: 0, bettingOpen: true, progress: "Open" }
 ];
 let bets = JSON.parse(localStorage.getItem("bets")) || [];
 let betLog = JSON.parse(localStorage.getItem("betLog")) || [];
-let adminClickCount = 0; // tracks bet clicks for secret admin prompt
 let isAdmin = localStorage.getItem("isAdmin") === "true";
 
-function saveData() {
+// --- SECRET TITLE CLICK ---
+let titleClickCount = 0;
+document.getElementById("siteTitle").addEventListener("click", ()=>{
+    titleClickCount++;
+    if(titleClickCount>=10){
+        let pass = prompt("Enter admin password:");
+        if(pass === "vrfsbetvrfs717"){
+            isAdmin = true;
+            localStorage.setItem("isAdmin","true");
+            showAdmin();
+            alert("Admin access granted!");
+        } else {
+            alert("Wrong password!");
+        }
+        titleClickCount = 0;
+    }
+});
+
+// --- SAVE / BALANCE / CHECK ---
+function saveData(){
     localStorage.setItem("balance", balance);
     localStorage.setItem("games", JSON.stringify(games));
     localStorage.setItem("bets", JSON.stringify(bets));
     localStorage.setItem("betLog", JSON.stringify(betLog));
 }
 
-function checkBalanceReset() {
-    if (balance <= 0) {
+function checkBalanceReset(){
+    if(balance <= 0){
         balance = 100;
         saveData();
         updateBalance();
@@ -81,73 +100,65 @@ function checkBalanceReset() {
     }
 }
 
-function renderGames() {
+function updateBalance(){ document.getElementById("balance").innerText = balance; }
+
+// --- RENDER ---
+function renderGames(){
     checkBalanceReset();
     let container = document.getElementById("games");
     container.innerHTML = "";
-    games.forEach(game => {
-        let hasBet = bets.find(b => b.gameId === game.id);
-        let status = game.bettingOpen ? "Open" : "Closed";
+    games.forEach(game=>{
+        let hasBet = bets.find(b=>b.gameId===game.id);
+        let status = game.bettingOpen?"Open":"Closed";
         let div = document.createElement("div");
-        div.className = "game";
-        div.innerHTML = `
+        div.className="game";
+        div.innerHTML=`
             <strong>${game.team1}</strong> vs <strong>${game.team2}</strong>
-            <br>Score: ${game.score1} - ${game.score2} 
+            <br>Score: ${game.score1} - ${game.score2}
             <br>Status: ${status}, Progress: ${game.progress}
             <br>
-            <input type="number" id="betAmount${game.id}" placeholder="Points" ${hasBet || !game.bettingOpen || game.progress!=="Open" ? "disabled" : ""}>
-            <select id="betTeam${game.id}" ${hasBet || !game.bettingOpen || game.progress!=="Open" ? "disabled" : ""}>
+            <input type="number" id="betAmount${game.id}" placeholder="Points" ${hasBet || !game.bettingOpen || game.progress!=="Open"?"disabled":""}>
+            <select id="betTeam${game.id}" ${hasBet || !game.bettingOpen || game.progress!=="Open"?"disabled":""}>
                 <option value="${game.team1}">${game.team1}</option>
                 <option value="${game.team2}">${game.team2}</option>
             </select>
-            <button onclick="placeBet(${game.id})" ${hasBet || !game.bettingOpen || game.progress!=="Open" ? "disabled" : ""}>Bet</button>
+            <button onclick="placeBet(${game.id})" ${hasBet || !game.bettingOpen || game.progress!=="Open"?"disabled":""}>Bet</button>
         `;
         container.appendChild(div);
     });
 }
 
-function renderBetLog() {
+function renderBetLog(){
     let logContainer = document.getElementById("betLog");
-    logContainer.innerHTML = betLog.slice(-10).map(entry => `<p>${entry}</p>`).join("");
+    logContainer.innerHTML = betLog.slice(-10).map(entry=>`<p>${entry}</p>`).join("");
 }
 
-function placeBet(gameId) {
-    let game = games.find(g => g.id === gameId);
+// --- BET ---
+function placeBet(gameId){
+    let game = games.find(g=>g.id===gameId);
     let amount = parseInt(document.getElementById(`betAmount${game.id}`).value);
     let team = document.getElementById(`betTeam${game.id}`).value;
 
-    if (!amount || amount <= 0) return alert("Enter a valid bet amount");
-    if (amount > balance) return alert("You do not have enough points");
-    if (bets.find(b => b.gameId === game.id)) return alert("You already bet on this game");
-    if (!game.bettingOpen || game.progress!=="Open") return alert("Betting is closed for this game");
+    if(!amount || amount<=0) return alert("Enter a valid bet amount");
+    if(amount>balance) return alert("You do not have enough points");
+    if(bets.find(b=>b.gameId===game.id)) return alert("You already bet on this game");
+    if(!game.bettingOpen || game.progress!=="Open") return alert("Betting is closed for this game");
 
     balance -= amount;
     updateBalance();
 
-    bets.push({ gameId: game.id, team, amount });
+    bets.push({gameId:game.id, team, amount});
     betLog.push(`A user has placed a bet on ${team} with ${amount} point(s)`);
+
     saveData();
     renderGames();
     renderBetLog();
-
-    // Secret admin access logic
-    adminClickCount++;
-    if (adminClickCount === 5) {
-        let pass = prompt("Enter admin password:");
-        if (pass === "vrfsbetvrfs717") {
-            isAdmin = true;
-            localStorage.setItem("isAdmin", "true");
-            showAdmin();
-        } else {
-            alert("Wrong password");
-        }
-    }
-
     checkBalanceReset();
 }
 
-function showAdmin() {
-    document.getElementById("adminPanel").style.display = "block";
+// --- ADMIN PANEL ---
+function showAdmin(){
+    document.getElementById("adminPanel").style.display="block";
     renderScoreUpdate();
     renderProgressUpdate();
     renderStartGameControls();
@@ -155,39 +166,36 @@ function showAdmin() {
     renderDeleteControls();
 }
 
-function logoutAdmin() {
-    isAdmin = false;
+function logoutAdmin(){
+    isAdmin=false;
     localStorage.removeItem("isAdmin");
-    document.getElementById("adminPanel").style.display = "none";
+    document.getElementById("adminPanel").style.display="none";
 }
 
-function renderScoreUpdate() {
-    let container = document.getElementById("scoreUpdate");
-    container.innerHTML = "";
-    games.forEach((game) => {
-        container.innerHTML += `
+// --- ADMIN FUNCTIONS ---
+function renderScoreUpdate(){
+    let container=document.getElementById("scoreUpdate"); container.innerHTML="";
+    games.forEach(game=>{
+        container.innerHTML+=`
             <div>
                 ${game.team1} <input type="number" id="score1_${game.id}" value="${game.score1}">
                 ${game.team2} <input type="number" id="score2_${game.id}" value="${game.score2}">
                 <button onclick="updateScore(${game.id})">Update</button>
-            </div>
-        `;
+            </div>`;
     });
 }
-
-function updateScore(gameId) {
-    let game = games.find(g => g.id === gameId);
-    game.score1 = parseInt(document.getElementById(`score1_${gameId}`).value);
-    game.score2 = parseInt(document.getElementById(`score2_${gameId}`).value);
+function updateScore(gameId){
+    let game=games.find(g=>g.id===gameId);
+    game.score1=parseInt(document.getElementById(`score1_${gameId}`).value);
+    game.score2=parseInt(document.getElementById(`score2_${gameId}`).value);
     saveData();
     renderGames();
 }
 
-function renderProgressUpdate() {
-    let container = document.getElementById("progressUpdate");
-    container.innerHTML = "";
-    games.forEach(game => {
-        container.innerHTML += `
+function renderProgressUpdate(){
+    let container=document.getElementById("progressUpdate"); container.innerHTML="";
+    games.forEach(game=>{
+        container.innerHTML+=`
         <div>
             ${game.team1} vs ${game.team2}
             <select id="progress_${game.id}">
@@ -200,119 +208,18 @@ function renderProgressUpdate() {
                 <option value="Closed" ${game.progress==="Closed"?'selected':''}>Closed</option>
             </select>
             <button onclick="updateProgress(${game.id})">Update Progress</button>
-        </div>
-        `;
+        </div>`;
     });
 }
-
-function updateProgress(gameId) {
-    let game = games.find(g => g.id === gameId);
-    game.progress = document.getElementById(`progress_${game.id}`).value;
-    if (game.progress==="Closed") game.bettingOpen = false;
+function updateProgress(gameId){
+    let game=games.find(g=>g.id===gameId);
+    game.progress=document.getElementById(`progress_${game.id}`).value;
+    if(game.progress==="Closed") game.bettingOpen=false;
     saveData();
-    renderGames();
-    renderProgressUpdate();
-    renderStartGameControls();
-    renderEndBetControls();
+    renderGames(); renderProgressUpdate();
 }
 
-function createGame() {
-    let team1 = document.getElementById("team1").value.trim();
-    let team2 = document.getElementById("team2").value.trim();
-    if (!team1 || !team2) return alert("Enter team names");
-    games.push({ id: Date.now(), team1, team2, score1:0, score2:0, bettingOpen:true, progress:"Open" });
-    document.getElementById("team1").value = "";
-    document.getElementById("team2").value = "";
-    saveData();
-    renderGames();
-    renderScoreUpdate();
-    renderProgressUpdate();
-    renderStartGameControls();
-    renderEndBetControls();
-    renderDeleteControls();
-}
-
-function renderStartGameControls() {
-    let container = document.getElementById("startGameControls");
-    container.innerHTML = "";
-    games.forEach(game => {
-        if (game.bettingOpen && game.progress==="Open") {
-            container.innerHTML += `<button onclick="startGame(${game.id})">Start Game: ${game.team1} vs ${game.team2}</button><br>`;
-        }
-    });
-}
-
-function startGame(gameId) {
-    let game = games.find(g => g.id===gameId);
-    game.bettingOpen = false;
-    game.progress = "1st Half";
-    saveData();
-    renderGames();
-    renderProgressUpdate();
-    renderStartGameControls();
-    renderEndBetControls();
-}
-
-function renderEndBetControls() {
-    let container = document.getElementById("endBetControls");
-    container.innerHTML = "";
-    games.forEach(game => {
-        if (!game.bettingOpen) {
-            container.innerHTML += `<button onclick="endBet(${game.id})">End Betting: ${game.team1} vs ${game.team2}</button><br>`;
-        }
-    });
-}
-
-function endBet(gameId) {
-    let game = games.find(g => g.id===gameId);
-    if (!game) return;
-    if (game.bettingOpen) return alert("Start the game first!");
-
-    bets.forEach(bet=>{
-        if (bet.gameId===gameId){
-            if (game.score1>game.score2 && bet.team===game.team1) balance+=bet.amount*2;
-            else if (game.score2>game.score1 && bet.team===game.team2) balance+=bet.amount*2;
-            else if (game.score1===game.score2) balance+=bet.amount;
-        }
-    });
-
-    bets = bets.filter(b=>b.gameId!==gameId);
-    saveData();
-    renderGames();
-    renderBetLog();
-    updateBalance();
-    renderEndBetControls();
-    alert(`Betting ended for ${game.team1} vs ${game.team2}`);
-}
-
-function renderDeleteControls() {
-    let container = document.getElementById("deleteGameControls");
-    container.innerHTML = "";
-    games.forEach(game=>{
-        container.innerHTML+=`<button onclick="deleteGame(${game.id})">Delete: ${game.team1} vs ${game.team2}</button><br>`;
-    });
-}
-
-function deleteGame(gameId){
-    if (!confirm("Are you sure?")) return;
-    games=games.filter(g=>g.id!==gameId);
-    bets=bets.filter(b=>b.gameId!==gameId);
-    saveData();
-    renderGames();
-    renderScoreUpdate();
-    renderProgressUpdate();
-    renderStartGameControls();
-    renderEndBetControls();
-    renderDeleteControls();
-}
-
-function givePoints(){
-    let amount=parseInt(document.getElementById("givePointsAmount").value);
-    if(amount>0){balance+=amount; saveData(); updateBalance();}
-}
-
-function updateBalance(){document.getElementById("balance").innerText=balance;}
-
+// --- INITIALIZE ---
 updateBalance();
 renderGames();
 renderBetLog();
